AIA-19332 - Add discovery API for SQL
