# aia-il-configuration-service/swagger/swagger.yaml
@@ -1137,6 +1137,37 @@ paths:
 
         '405':
           description: Invalid input
+  '/projects/{projectKey}/configuration/discovery/discover-external-sql':
+    post:
+      x-amdocs:
+        public-roles:
+          - aia_il_configuration_authoring_discoverExternalSql
+        private-roles:
+          - aiaP_il_configuration_authoring_discoverExternalSql
+      tags:
+        - Discovery
+      summary: Discover External Sql Async
+      operationId: discoverExternalSqlAsync
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - $ref: '#/parameters/projectKey'
+        - in: body
+          name: discoverExternalSqlRequest
+          description: The discovery external Sql request details
+          required: true
+          schema:
+            $ref: '#/definitions/DiscoverExternalSqlRequest'
+      responses:
+        '201':
+          description: OK discover External Sql Schema
+          schema:
+            $ref: '#/definitions/AsyncResponse'
+
+        '405':
+          description: Invalid input
   '/projects/{projectKey}/configuration/discovery/discover-external-json':
     post:
       x-amdocs:
@@ -3416,6 +3447,33 @@ definitions:
         type: string
       externalSchemaType:
         description: A schema types,valid types are CSV_OVER_JSON, DIGITAL1, CATALOG1
+        type: string
+      availability:
+        $ref: "#/definitions/Availability"
+      subjectAreaName:
+        type: string
+        description: The external schema's subjectArea name
+      subjectAreaKey:
+        type: string
+        description: The external schema's subjectArea key
+
+  DiscoverExternalSqlRequest:
+    title: A parameterized request for external Sql discovery
+    properties:
+      schemaName:
+        description: The schemaName of the discover External Sql Schema
+        type: string
+      connectionString:
+        description: The jdbc connection string
+        type: string
+      dbUser:
+        description: The jdbc user name
+        type: string
+      dbPassword:
+        description: The jdbc user password
+        type: string
+      dbType:
+        description: A sql types,valid types are ORACLE, POSTGRESQL
         type: string
       availability:
         $ref: "#/definitions/Availability"
